# mythikal-api

./: .env  auth.py  db.py  main.py  pyproject.toml  requirements.txt  user.py  vercel.json
api/: auth.py  data_model.py
