[project]
name = "mythikal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.115.5",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.22.0",
    "asyncpg>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0"  # Optional for local .env file management
]

