[project]
name = "mythikal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "uvicorn[standard]",
    "asyncpg",
    "passlib[bcrypt]",
    "python-dotenv"  # Optional for local .env file management
]

