[project]
name = "mythikal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.115.5",
    "python-multipart==0.0.6",
    "sqlmodel==0.0.8",
    "uvicorn==0.22.0",
    "asyncpg==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.6"
]
